# aether-client-cpp-new

./: .gitmodules  CPPLINT.cfg  README.md  git_init.bat  git_init.ps1  git_init.sh  library.json  library.properties
aether/: CMakeLists.txt  address.cpp  address.h  aether.cpp  aether.h  channel.cpp  channel.h  client.cpp  client.h  cloud.cpp  cloud.h  common.h  config.h  config_consts.h  crc.h  crypto.h  env.h  fixed_point.h  global_ids.h  literal_array.h  memory_buffer.h  mstream.h  mstream_buffers.h  packed_int.h  proof_of_work.cpp  proof_of_work.h  registration_cloud.cpp  registration_cloud.h  ring_buffer.h  server.cpp  server.h  server_keys.cpp  server_keys.h  socket_initializer.cpp  socket_initializer.h  state_machine.h  statistics.cpp  statistics.h  type_traits.h  uid.cpp  (+5 more)
aether/actions/: action.h  action_context.cpp  action_context.h  action_list.h  action_processor.cpp  action_processor.h  action_registry.cpp  action_registry.h  action_trigger.cpp  action_trigger.h  action_view.h
aether/adapters/: adapter.cpp  adapter.h  esp32_wifi.cpp  esp32_wifi.h  ethernet.cpp  ethernet.h  parent_wifi.cpp  parent_wifi.h  proxy.h  register_wifi.cpp  register_wifi.h
aether/ae_actions/: get_client_cloud.cpp  get_client_cloud.h  get_client_cloud_connection.cpp  get_client_cloud_connection.h  pull.cpp  pull.h
aether/ae_actions/registration/: registration.cpp  registration.h  registration_key_provider.cpp  registration_key_provider.h
aether/api_protocol/: api_message.h  api_protocol.cpp  api_protocol.h  child_data.cpp  child_data.h  packet_builder.h  protocol_context.cpp  protocol_context.h  send_result.h
aether/client_connections/: client_cloud_connection.cpp  client_cloud_connection.h  client_connection.h  client_connection_manager.cpp  client_connection_manager.h  client_server_connection.cpp  client_server_connection.h  client_server_connection_selector.cpp  client_server_connection_selector.h  client_to_server_stream.cpp  client_to_server_stream.h  iclient_server_connection_factory.h
aether/client_messages/: message_stream.cpp  message_stream.h  message_stream_dispatcher.cpp  message_stream_dispatcher.h  p2p_message_stream.cpp  p2p_message_stream.h  p2p_safe_message_stream.cpp  p2p_safe_message_stream.h
aether/crypto/: async_crypto_provider.cpp  async_crypto_provider.h  crypto_definitions.h  crypto_nonce.cpp  crypto_nonce.h  icrypto_provider.h  ikey_provider.h  key.h  key_gen.cpp  key_gen.h  sign.h  signed_key.cpp  signed_key.h  sync_crypto_provider.cpp  sync_crypto_provider.h
aether/crypto/hydrogen/: hydro_async_crypto_provider.cpp  hydro_async_crypto_provider.h  hydro_sync_crypto_provider.cpp  hydro_sync_crypto_provider.h
aether/crypto/sodium/: sodium_async_crypto_provider.cpp  sodium_async_crypto_provider.h  sodium_sync_crypto_provider.cpp  sodium_sync_crypto_provider.h
aether/dns/: dns_c_ares.cpp  dns_c_ares.h  dns_resolve.cpp  dns_resolve.h  esp32_dns_resolve.cpp  esp32_dns_resolve.h
aether/events/: barrier_event.h  event_handler.h  event_subscription.cpp  event_subscription.h  events.h  multi_subscription.cpp  multi_subscription.h
aether/methods/: server_descriptor.h  uid_and_cloud.h
aether/methods/client_api/: client_safe_api.cpp  client_safe_api.h
aether/methods/client_reg_api/: client_global_reg_api.cpp  client_global_reg_api.h  client_reg_api.cpp  client_reg_api.h
aether/methods/server_reg_api/: global_reg_server_api.cpp  global_reg_server_api.h  root_api.cpp  root_api.h  server_registration_api.cpp  server_registration_api.h
aether/methods/work_server_api/: authorized_api.cpp  authorized_api.h  login_api.cpp  login_api.h
aether/poller/: epoll_poller.cpp  epoll_poller.h  freertos_poller.cpp  freertos_poller.h  kqueue_poller.cpp  kqueue_poller.h  poller.cpp  poller.h  poller_types.h  win_poller.cpp  win_poller.h
aether/port/: tele_init.cpp  tele_init.h
aether/port/file_systems/: file_system_base.h  file_system_header.cpp  file_system_header.h  file_system_ram.cpp  file_system_ram.h  file_system_spifs_v1.cpp  file_system_spifs_v1.h  file_system_spifs_v2.cpp  (+3 more)
aether/server_list/: list_policy.h  no_filter_server_list_policy.cpp  no_filter_server_list_policy.h  server_list.cpp  server_list.h  server_transport_factory.h
aether/stream_api/: buffer_gate.cpp  buffer_gate.h  crypto_stream.cpp  crypto_stream.h  debug_gate.cpp  debug_gate.h  header_gate.cpp  header_gate.h  istream.h  one_gate_stream.h  protocol_stream.h  safe_stream.cpp  safe_stream.h  serialize_stream.h  sized_packet_stream.cpp  sized_packet_stream.h  splitter_gate.cpp  splitter_gate.h  stream_api.cpp  stream_api.h  stream_write_action.cpp  stream_write_action.h  tied_stream.h  transport_write_gate.cpp  transport_write_gate.h  unidirectional_gate.cpp  unidirectional_gate.h
aether/tele/: collectors.h  declaration.h  defines.h  env_collectors.h  ios.h  ios_time.h  levels.h  modules.h  register.h  sink.h  tele.h
aether/transport/: data_buffer.h  itransport.h
projects/cmake/: CMakeLists.txt
tests/: CMakeLists.txt  CPPLINT.cfg  sanitizer_checks.h
tests/test-actions/: CMakeLists.txt  main.cpp  test-action-registry.cpp  test-events.cpp
tests/test-api-protocol/: CMakeLists.txt  api_level0.h  api_level1.h  api_with_result.h  assert_packet.h  test-api-protocol.cpp
tests/test-object-system/: CMakeLists.txt  main.cpp  map_facility.h  test-domain-tree.cpp  test-obj-create.cpp  test-ptr-cycles.cpp  test-ptr-inheritance.cpp  test-ptr-view.cpp  test-ptr.cpp  test-update-objects.cpp  test-version-iterator.cpp
tests/test-packed-int/: CMakeLists.txt  test-packed-int.cpp
tests/test-stream/: CMakeLists.txt  main.cpp  mock_read_gate.h  mock_write_gate.h
tests/test-tele/: CMakeLists.txt  test-tele.cpp
tests/test-tele-statistics/: CMakeLists.txt  test-tele-statistics.cpp
tests/test-transport/: CMakeLists.txt  main.cpp  mock_server_transport_factory.h  mock_transport.cpp  mock_transport.h  test-data-packet-collector.cpp
tests/test-types/: CMakeLists.txt  main.cpp  test-fixed-point.cpp  test-literal-array.cpp  test-ring-buffer.cpp
tests/third_party_tests/: CMakeLists.txt
(+162 files in other folders)
