cmake_minimum_required( VERSION 3.16 )

add_subdirectory(${ROOT_DIR}/third_party/libbcrypt_unit_tests third_party_tests/libbcrypt_unit_tests)
add_subdirectory(${ROOT_DIR}/third_party/libhydrogen_unit_tests third_party_tests/libhydrogen_unit_tests)
add_subdirectory(${ROOT_DIR}/third_party/libsodium_unit_tests third_party_tests/libsodium_unit_tests)
